_sass/main.scss
h1, h2, h3,
h4, h5, h6,
p, li {
    @extend %text !optional;
}

// debug
// * {
//   outline: 1px solid #f00 !important;
// }

html {
  scroll-behavior: smooth;
}

// colors

.color-white {
  color: $white;
}

.background-white {
  background-color: $white;
}

.background-fade-white {
  background-image: linear-gradient($white, transparent);
}

.background-blue-crayola {
  background-color: $blue-crayola;
}

.background-dark-crayola {
  background-color: $dark-blue-crayola;
}

.background-dark-crayola %text {
  color: white;
}

// navbar

.navbar a {
  text-decoration: none;
  transition: all 0.25s ease-in-out;
  border-bottom: 1px solid transparent;
}

.navbar a:hover{
  border-color: $navbar-light-hover-color;
}

// full width background image

.background-image {
  overflow: hidden;
  max-height: 300px;
  position: relative;
  text-align: center;
}

@include media-breakpoint-up(lg) {
  .background-image {
    max-height: 700px;
  }
}

.background-image .full-height {
  max-height: inherit;
}

.background-image .blur {
  z-index: -1;

  filter: blur(8px);
  -webkit-filter: blur(8px);
  
  width: 100%;
  color: $white;
  position: absolute;
  // top: 50%;
}

.background-image %text {
  color: $dark-blue-crayola;
  position: absolute;
  top: 20%;
  right: 30%;
}

// cards

a.card {
  text-decoration: inherit;
  color: inherit;
  transition: 0.3s;
  cursor: pointer;
}

a.card:hover {
  background-color: $bright-blue-crayola;
}

a.card * {
  text-decoration: inherit;
  color: inherit;
}

// card blink
@keyframes blink-animation {
  0%   {background-color: $blue-crayola;}
  25%  {background-color: $white;}
  50%  {background-color: $blue-crayola;}
  75% {background-color: $white;}
  100% {background-color: $blue-crayola;}
}

.blink {
  animation-name: blink-animation;
  animation-duration: 3s;
}

// footer

.footer a {
  text-decoration: none;
  color: $black;
}

.footer a:hover {
  text-decoration: underline;
  color: $blue-crayola;
}

// anchor offset

a.anchor {
    display: block;
    position: relative;
    // TODO recalculate for all device sizes
    top: -80px;
    visibility: hidden;
}

a.high-anchor {
    display: block;
    position: relative;
    // TODO recalculate for all device sizes
    top: -150px;
    visibility: hidden;
}

// icon

.icon-center {
  vertical-align: middle;
  display: inline-block;
}

// kontakt

.kontakt-link {
  text-decoration: underline;
  color: $dark-blue-crayola;
  transition: all 0.25s ease-in-out;
}

.background-dark-crayola .kontakt-link {
  color: white;
}

.kontakt-link:hover {
  color: black;
}

